Normalize to lower case in tracing HeaderProviders